tests/snapshots/examples_fixtures/type_system__failing__12_generic_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/12_generic_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 2nd argument to `both`.

  examples/type_system/failing/12_generic_mismatch.flx:36:10
   |
34 | fn both<T>(a: T, b: T) -> T { a }
   | --------------------------- `both` expects `Int` as the 2nd parameter
35 | 
36 | both(42, "hello")
   |          ^^^^^^^
   |          ------- this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 2nd argument.
== stdout ==
<not executed>
